# app-template

./: .gitignore  LICENSE  README.md
frontend/: pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/resources/: config.dart  router.dart  user_notifier.dart
frontend/lib/src/: app.dart
frontend/lib/src/dialog/: email_signup_dialog.dart  login_dialog.dart  signup_dialog.dart
frontend/lib/src/models/: token_model.dart  user_model.dart
frontend/lib/src/pages/frontpage/: center_page.dart  front_page.dart  main_app_bar.dart
frontend/lib/src/services/: user_service.dart
frontend/lib/src/util/: expand_item.dart  other_app_bar.dart  panel_item.dart  response_dialog.dart
frontend/test/: widget_test.dart
frontend/web/: index.html
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc
restapi/: Dockerfile  README.md  docker-compose.yml  env.TEMPLATE  pyproject.toml
restapi/app/: main.py  util.py
restapi/app/core/: config.py  security.py
restapi/app/crud/: user.py
restapi/app/db/: base.py  base_class.py  database.py
restapi/app/email-templates/src/: new_account.mjml  reset_password.mjml  verify_email.mjml
restapi/app/model/: __init__.py  user.py
restapi/app/router/: dep.py  path.py
restapi/app/router/api/: login.py  user.py
restapi/app/schema/: __init__.py  msg.py  token.py  user.py
restapi/app/scripts/: populate_db.py
(+2 files in other folders)
